--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>common</module>
         <module>gateway</module>
         <module>provider</module>
+        <module>provider-api</module>
     </modules>
 
     <distributionManagement>
