--- a/common/common-entity/pom.xml
+++ b/common/common-entity/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>common-entity</artifactId>
 
-
+    <dependencies>
+        <!--shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-starter</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+    </dependencies>
 </project>
