--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <aliyun-java-sdk-dysmsapi.version>1.0.0</aliyun-java-sdk-dysmsapi.version>
         <aliyun.oss.version>3.6.0</aliyun.oss.version>
         <swagger2.version>2.9.2</swagger2.version>
+        <org.jfinger.version>1.0-SNAPSHOT</org.jfinger.version>
     </properties>
 
     <dependencies>
