--- a/provider-api/provider-api-uac/pom.xml
+++ b/provider-api/provider-api-uac/pom.xml
@@ -3,15 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>common</artifactId>
+        <artifactId>provider-api</artifactId>
         <groupId>org.jfinger</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common-core</artifactId>
+    <artifactId>provider-api-uac</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jfinger</groupId>
+            <artifactId>common-core</artifactId>
+            <version>${org.jfinger.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.jfinger</groupId>
             <artifactId>common-entity</artifactId>
@@ -19,14 +24,8 @@
         </dependency>
         <dependency>
             <groupId>org.jfinger</groupId>
-            <artifactId>provider-api-uac</artifactId>
+            <artifactId>common-utils</artifactId>
             <version>${org.jfinger.version}</version>
         </dependency>
-        <!-- feign -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
     </dependencies>
-
 </project>
